{
    "name": "InputMaster",
    "maps": [
        {
            "name": "Player",
            "id": "ca4796fe-2531-42f4-9b15-cc42d03d4b83",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "7dea2a44-4c2a-41b8-a1b0-abe4c207c3cb",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Rotation X",
                    "type": "Value",
                    "id": "e3adb08e-1009-4702-9bf2-2031df7441f2",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Rotation Y",
                    "type": "Value",
                    "id": "33ac0629-8ff4-4ba1-bec1-5bad183ba624",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "5200fa4a-2241-45fa-8893-f6785e5bfb0b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "192bbfee-67f8-4c7e-aa82-bb086dfa6c36",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                },
                {
                    "name": "Crouch",
                    "type": "Button",
                    "id": "6b53b800-e3ea-4719-a614-06023900e501",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                },
                {
                    "name": "RightClick",
                    "type": "Button",
                    "id": "68970c33-e541-4993-a47f-e41f41fd82dd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                },
                {
                    "name": "LeftClick",
                    "type": "Button",
                    "id": "31858818-25b8-4307-89c1-89574ab8023f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                },
                {
                    "name": "CameraMenu",
                    "type": "Button",
                    "id": "1da33e43-45e3-4f86-907a-c1acabef85b2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "f82b5224-e5af-4b98-b703-29ce93920310",
                    "path": "2DVector(mode=2)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "560f585d-e3c9-4d6a-81d6-639528e4af7e",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Teclado y Ratón",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "d8dd1c31-ee70-49ef-8362-b0a24d8154f6",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Teclado y Ratón",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "407cb36d-751d-4877-99c8-e998cf07b4d2",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Teclado y Ratón",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "ac3c850c-909d-48e9-bb04-eebdb5a503f2",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Teclado y Ratón",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "0f49dd6d-2b51-4dff-af7f-bf0db52bddcf",
                    "path": "<Mouse>/delta/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "Teclado y Ratón",
                    "action": "Rotation X",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6369c9c6-5f0f-4eec-99d3-3b9a68bff2fb",
                    "path": "<Mouse>/delta/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "Teclado y Ratón",
                    "action": "Rotation Y",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "24e137c7-0cb2-44d1-a49b-0d355d1bcc1b",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "Teclado y Ratón",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "af8821e8-2898-4cf3-93fb-37050849bb49",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Teclado y Ratón",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "71d0a26e-d8e3-47bc-83a0-a72f2329becf",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "Teclado y Ratón",
                    "action": "Crouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "449b8a65-0944-4696-b53f-96cfc242007c",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9be2f546-f730-419d-9e43-34ae9ff3241d",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6eef04e8-486d-4474-a9c3-7b17f336038f",
                    "path": "<Keyboard>/m",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Debug",
            "id": "e63c9ff9-ea10-483d-9b6d-228730177a06",
            "actions": [
                {
                    "name": "LeftClick",
                    "type": "Button",
                    "id": "66c18146-d94f-405b-9ba1-3fcac7c4a7d4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "Escape",
                    "type": "Button",
                    "id": "8eba3c53-e553-4a15-9a1f-01895dfa44f2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "180dc731-4add-4a98-b7fb-1e8394eee1b6",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Teclado y Ratón",
                    "action": "LeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c16518f6-acd8-4984-a671-4f77373618cb",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "Teclado y Ratón",
                    "action": "Escape",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Teclado y Ratón",
            "bindingGroup": "Teclado y Ratón",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}